// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiniBagHeader component renders correctly 1`] = `
<div>
  <Styled(Row)
    className="mainWrapper"
  >
    <Styled(Col)
      className="subHeaderText"
      colSize={
        Object {
          "large": 9,
          "medium": 6,
          "small": 4,
        }
      }
    >
      <Styled(BodyCopy)
        className="userName"
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        undefined, User 
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className="pointsRewards"
        color="text.primary"
        component="span"
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        (undefined points, $NaN rewards)
      </Styled(BodyCopy)>
    </Styled(Col)>
    <Styled(Col)
      className="subHeaderTextIcon"
      colSize={
        Object {
          "large": 3,
          "medium": 2,
          "small": 2,
        }
      }
    >
      <Styled(Anchor)
        anchorVariation="primary"
        className="favIcon"
        fontSizeVariation="small"
        noLink={true}
      >
        <Styled(Image)
          alt="Product"
          className="product-image"
          dataLocator="addedtobag-fav-icon"
          src="/static/images/heart.png"
        />
      </Styled(Anchor)>
        
      <Styled(Image)
        alt="Product"
        className="product-image"
        data-locator="addedtobag-bag-icon"
        src="/static/images/bag-2.svg"
      />
      <Styled(BodyCopy)
        className="cartCount"
        color="text.primary"
        component="span"
        dataLocator="miniBagCount"
        fontFamily="primary"
        fontSize="fs10"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        12
      </Styled(BodyCopy)>
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`MiniBagHeader component renders correctly without username 1`] = `
<div>
  <Styled(Row)
    className="mainWrapper"
  >
    <Styled(Col)
      className="subHeaderTextLogin"
      colSize={
        Object {
          "large": 9,
          "medium": 6,
          "small": 4,
        }
      }
    >
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="span"
        fontFamily="primary"
        fontSize="fs12"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="large"
          noLink={true}
          to=""
        />
        <Styled(BodyCopy)
          className="separator"
          color="text.primary"
          component="span"
          fontFamily="primary"
          fontSize="fs10"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
        <Styled(Anchor)
          anchorVariation="primary"
          className="rightLink"
          fontSizeVariation="large"
          noLink={true}
        />
      </Styled(BodyCopy)>
    </Styled(Col)>
    <Styled(Col)
      className="subHeaderTextIcon"
      colSize={
        Object {
          "large": 3,
          "medium": 2,
          "small": 2,
        }
      }
    >
      <Styled(Anchor)
        anchorVariation="primary"
        className="favIcon"
        fontSizeVariation="small"
        noLink={true}
      >
        <Styled(Image)
          alt="Product"
          className="product-image"
          dataLocator="addedtobag-fav-icon"
          src="/static/images/heart.png"
        />
      </Styled(Anchor)>
        
      <Styled(Image)
        alt="Product"
        className="product-image"
        data-locator="addedtobag-bag-icon"
        src="/static/images/bag-2.svg"
      />
      <Styled(BodyCopy)
        className="cartCount"
        color="text.primary"
        component="span"
        dataLocator="miniBagCount"
        fontFamily="primary"
        fontSize="fs10"
        fontWeight="semibold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        12
      </Styled(BodyCopy)>
    </Styled(Col)>
  </Styled(Row)>
</div>
`;
